--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -27,7 +27,9 @@
         </div>
 
     </div>
-    <footer th:replace="/fragments/footer :: div"></footer>
+<div class="footer">
+    <p>Copyright • Todos los derechos reservados • 2022</p>
+</div>
 </body>
 
 </html>
