--- a/src/main/resources/templates/formulario_periodista.html
+++ b/src/main/resources/templates/formulario_periodista.html
@@ -1,59 +1,69 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="/fragments/head :: head"></head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizarras del Sur - Inicio</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/estilos.css">
+</head>
 
-<body>
-    <nav class="navbar bg-dark d-flex justify-content-between">
-        <a class="text-decoration-none text-white h2" th:href="@{/}">Egg News</a>
-        <button class="btn btn-warning">
-            <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
-        </button>
-    </nav>
+    <body>
+        <nav class="navbar bg-dark d-flex justify-content-between">
+            <a class="text-decoration-none text-white h2" th:href="@{/}">Egg News</a>
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
+            </button>
+        </nav>
 
-    <div class="container-fluid m-5 contenedor">
-        <form th:action="@{admin/registro_periodista}" method="POST" class="formulario">
+        <div class="container-fluid m-5 contenedor">
+            <form th:action="@{admin/registro_periodista}" method="POST" class="formulario">
 
-            <div class="form-group my-3">
-                <h3 class="card-title">Registrar periodista</h3>
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
-                    th:value="${nombreu}">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Contraseña" name="password">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
-            </div>
-            <div class="form-group my-3">
-                <input type="number" class="form-control" placeholder="Sueldo Mensual" name="sueldoMensual"
-                    sec:authorize="hasRole('ADMIN')">
-            </div>
-            <div class="form-group my-3">
-                <input type="hidden" class="form-control" name="cantidadNoticias" th:value="0"
-                    sec:authorize="hasRole('ADMIN')">
-            </div>
-            <div class="form-group my-3">
-                <input type="hidden" class="form-control" name="alta" th:value="true" sec:authorize="hasRole('ADMIN')">
-            </div>
-            <div class="form-group my-3">
-                <input type="hidden" class="form-control" name="rol" th:value="PERIODISTA"
-                    sec:authorize="hasRole('ADMIN')">
-            </div>
-            <button type="submit" name="registro" class="btn btn-light mt-3 botones">Registrar</button>
+                <div class="form-group my-3">
+                    <h3 class="card-title">Registrar periodista</h3>
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
+                           th:value="${nombreu}">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
+                </div>
+                <div class="form-group my-3">
+                    <input type="number" class="form-control" placeholder="Sueldo Mensual" name="sueldoMensual"
+                           sec:authorize="hasRole('ADMIN')">
+                </div>
+                <div class="form-group my-3">
+                    <input type="hidden" class="form-control" name="cantidadNoticias" th:value="0"
+                           sec:authorize="hasRole('ADMIN')">
+                </div>
+                <div class="form-group my-3">
+                    <input type="hidden" class="form-control" name="alta" th:value="true" sec:authorize="hasRole('ADMIN')">
+                </div>
+                <div class="form-group my-3">
+                    <input type="hidden" class="form-control" name="rol" th:value="PERIODISTA"
+                           sec:authorize="hasRole('ADMIN')">
+                </div>
+                <button type="submit" name="registro" class="btn btn-light mt-3 botones">Registrar</button>
 
-        </form>
+            </form>
 
-        <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
-            <div class="card-body">
-                <h5 class="card-title">Error</h5>
-                <p class="card-text" th:text="${error}"></p>
+            <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
+                <div class="card-body">
+                    <h5 class="card-title">Error</h5>
+                    <p class="card-text" th:text="${error}"></p>
+                </div>
             </div>
         </div>
-    </div>
-
-</body>
+        <div class="footer">
+            <p>Copyright • Todos los derechos reservados • 2022</p>
+        </div>
+    </body>
 
 </html>
