--- a/src/main/resources/templates/lista_periodistas.html
+++ b/src/main/resources/templates/lista_periodistas.html
@@ -1,34 +1,44 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="/fragments/head :: head"></head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pizarras del Sur - Inicio</title>
 
-<body>
-    <nav class="navbar d-flex justify-content-between">
-        <span style="width: 20% ;">
-            <a th:href="@{/noticias}">
-                <img class="eggNews" src="../images/egg.png" alt="eggNews">
-            </a>
-        </span>
-        <button class="btn btn-warning">
-            <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
-        </button>
-    </nav>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/estilos.css">
+    </head>
 
-    <div th:each="periodista:${periodistas}">
-        <div class="card bg-black mt-1">
-            <div th:if="${periodista.alta == true}" class="reesplandor">
-                <p th:text="${periodista.nombreu}"></p>
-                <button class="btn btn-light">
-                    <a class="text-decoration-none text-dark" th:href="@{/admin/periodista/__${periodista.nombreu}__}">Dar
-                        de Baja</a>
-                </button>
+    <body>
+        <nav class="navbar d-flex justify-content-between">
+            <span style="width: 20% ;">
+                <a th:href="@{/noticias}">
+                    <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                </a>
+            </span>
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
+            </button>
+        </nav>
+
+        <div th:each="periodista:${periodistas}">
+            <div class="card bg-black mt-1">
+                <div th:if="${periodista.alta == true}" class="reesplandor">
+                    <p th:text="${periodista.nombreu}"></p>
+                    <button class="btn btn-light">
+                        <a class="text-decoration-none text-dark" th:href="@{/admin/periodista/__${periodista.nombreu}__}">Dar
+                            de Baja</a>
+                    </button>
+                </div>
+
             </div>
 
-        </div>
-
-        <br>
-        <footer th:replace="/fragments/footer :: div"></footer>
-</body>
+            <br>
+            <div class="footer">
+                <p>Copyright • Todos los derechos reservados • 2022</p>
+            </div>
+    </body>
 
 </html>
