--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,45 +1,54 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="/fragments/head :: head"></head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizarras del Sur - Inicio</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/estilos.css">
+</head>
+    <body>
+        <nav class="navbar d-flex justify-content-between">
+            <span style="width: 20% ;">
+                <a th:href="@{/}">
+                    <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                </a>
+            </span>
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
+            </button>
+        </nav>
 
-<body>
-    <nav class="navbar d-flex justify-content-between">
-        <span style="width: 20% ;">
-            <a th:href="@{/}">
-                <img class="eggNews" src="../images/egg.png" alt="eggNews">
-            </a>
-        </span>
-        <button class="btn btn-warning">
-            <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
-        </button>
-    </nav>
+        <div>
+            <form th:action="@{/logincheck}" method="POST" class="formulario">
 
-    <div>
-        <form th:action="@{/logincheck}" method="POST" class="formulario">
+                <div class="form-group my-3">
+                    <h3 class="reesplandor">Accede a las noticias</h3>
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
+                           th:value="${nombreu}">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                </div>
+                <button type="submit" class="btn btn-light mt-3 botones">Ingresar</button>
 
-            <div class="form-group my-3">
-                <h3 class="reesplandor">Accede a las noticias</h3>
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
-                    th:value="${nombreu}">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Contraseña" name="password">
-            </div>
-            <button type="submit" class="btn btn-light mt-3 botones">Ingresar</button>
-
-        </form>
-        <br>
-        <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
-            <div class="card-body">
-                <h5 class="card-title">Error</h5>
-                <p class="card-text" th:text="${error}"></p>
+            </form>
+            <br>
+            <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                <div class="card-body">
+                    <h5 class="card-title">Error</h5>
+                    <p class="card-text" th:text="${error}"></p>
+                </div>
             </div>
         </div>
-    </div>
-    <footer th:replace="/fragments/footer :: div"></footer>
-</body>
+        <div class="footer">
+            <p>Copyright • Todos los derechos reservados • 2022</p>
+        </div>
+    </body>
 
 </html>
