--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="/fragments/head :: head"></head>
-
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pizarras del Sur - Inicio</title>
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/estilos.css">
+</head>
 <body>
     <nav class="navbar d-flex justify-content-between">
         <span style="width: 20% ;">
@@ -42,7 +49,9 @@
             </div>
         </div>
     </div>
-    <footer th:replace="/fragments/footer :: div"></footer>
+<div class="footer">
+    <p>Copyright • Todos los derechos reservados • 2022</p>
+</div>
 </body>
 
 </html>
