--- a/src/main/resources/templates/registro_periodista.html
+++ b/src/main/resources/templates/registro_periodista.html
@@ -1,52 +1,54 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head th:replace="/fragments/head :: head"></head>
+    <head th:replace="/fragments/head :: head"></head>
 
-<body>
-    <nav class="navbar d-flex justify-content-between">
-        <span style="width: 20% ;">
-            <a th:href="@{/}">
-                <img class="eggNews" src="../images/egg.png" alt="eggNews">
-            </a>
-        </span>
-        <button class="btn btn-warning">
-            <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
-        </button>
-    </nav>
+    <body>
+        <nav class="navbar d-flex justify-content-between">
+            <span style="width: 20% ;">
+                <a th:href="@{/}">
+                    <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                </a>
+            </span>
+            <button class="btn btn-warning">
+                <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
+            </button>
+        </nav>
 
-    <div>
-        <form th:action="@{/admin/registro_periodista}" method="POST" class="formulario" th:object="${periodista}">
+        <div>
+            <form th:action="@{/admin/registro_periodista}" method="POST" class="formulario" th:object="${periodista}">
 
-            <div class="form-group my-3">
-                <h3 class="reesplandor">Registrar periodista</h3>
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
-                    th:value="${nombreu}" th:field="*{nombreu}">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Contraseña" name="password"
-                    th:field="*{password}">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
-            </div>
-            <div class="form-group my-3">
-                <input type="number" placeholder="Sueldo Mensual" name="sueldoMensual" th:field="*{sueldoMensual}">
-            </div>
-            <button type="submit" name="registro_periodista" class="btn btn-light mt-3 botones">Registrar
-                Periodista</button>
-        </form>
-        <br>
-        <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
-            <div class="card-body">
-                <h5 class="card-title">Error</h5>
-                <p class="card-text" th:text="${error}"></p>
+                <div class="form-group my-3">
+                    <h3 class="reesplandor">Registrar periodista</h3>
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
+                           th:value="${nombreu}" th:field="*{nombreu}">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Contraseña" name="password"
+                           th:field="*{password}">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
+                </div>
+                <div class="form-group my-3">
+                    <input type="number" placeholder="Sueldo Mensual" name="sueldoMensual" th:field="*{sueldoMensual}">
+                </div>
+                <button type="submit" name="registro_periodista" class="btn btn-light mt-3 botones">Registrar
+                    Periodista</button>
+            </form>
+            <br>
+            <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                <div class="card-body">
+                    <h5 class="card-title">Error</h5>
+                    <p class="card-text" th:text="${error}"></p>
+                </div>
             </div>
         </div>
-    </div>
-    <footer th:replace="/fragments/footer :: div"></footer>
-</body>
+        <div class="footer">
+            <p>Copyright • Todos los derechos reservados • 2022</p>
+        </div>
+    </body>
 
 </html>
