--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizarras del Sur - Inicio</title>
+    <title>Pizarras Artesanales</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -14,7 +14,7 @@
         <nav class="navbar d-flex justify-content-between">
             <span style="width: 20% ;">
                 <a th:href="@{/}">
-                    <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                    <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
             </span>
             <button class="btn btn-warning">
