--- a/src/main/resources/templates/formulario_periodista.html
+++ b/src/main/resources/templates/formulario_periodista.html
@@ -1,20 +1,21 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizarras del Sur - Inicio</title>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pizarras Artesanales</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/estilos.css">
+    </head>
 
     <body>
         <nav class="navbar bg-dark d-flex justify-content-between">
-            <a class="text-decoration-none text-white h2" th:href="@{/}">Egg News</a>
-            <button class="btn btn-warning">
+            <a th:href="@{/}">
+                <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+            </a>            <button class="btn btn-warning">
                 <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
             </button>
         </nav>
