--- a/src/main/resources/templates/noticia.html
+++ b/src/main/resources/templates/noticia.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pizarras del Sur - Inicio</title>
+        <title>Pizarras Artesanales</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,7 +15,7 @@
         <nav class="navbar d-flex justify-content-between">
             <span style="width: 20% ;">
                 <a th:href="@{/}">
-                    <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                    <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
             </span>
             <button class="btn btn-warning">
@@ -27,7 +27,7 @@
             <input hidden th:value="${noticia.id}" name="id">
 
             <h2 th:text="${noticia.titulo}"></h2>
-            <img th:src="@{'/imagenes/' + ${noticia.foto}}" class="img-fluid">
+            <img th:src="@{'/subidas/' + ${noticia.foto}}" class="img-fluid">
             <p th:text="${noticia.cuerpo}"></p>
             <p th:text="'Creador: ' + ${noticia.creador.nombreu}"></p>
         </div>
