--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -7,7 +7,7 @@
     <nav class="navbar d-flex justify-content-between">
         <span style="width: 20% ;">
             <a th:href="@{/}">
-                <img class="eggNews" src="../images/egg.png" alt="eggNews">
+                <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
             </a>
         </span>
         <button class="btn btn-warning">
