--- a/src/main/resources/templates/formulario_periodista.html
+++ b/src/main/resources/templates/formulario_periodista.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar bg-dark d-flex justify-content-between">
             <a th:href="@{/}">
-                <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
             </a>            <button class="btn btn-warning">
                 <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
             </button>
