--- a/src/main/resources/templates/lista_periodistas.html
+++ b/src/main/resources/templates/lista_periodistas.html
@@ -15,7 +15,7 @@
         <nav class="navbar d-flex justify-content-between">
             <span style="width: 20% ;">
                 <a th:href="@{/noticias}">
-                    <img class="eggNews" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                    <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
             </span>
             <button class="btn btn-warning">
