--- a/src/main/resources/templates/formulario_periodista.html
+++ b/src/main/resources/templates/formulario_periodista.html
@@ -13,9 +13,12 @@
 
     <body>
         <nav class="navbar bg-dark d-flex justify-content-between">
-            <a th:href="@{/}">
-                <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
-            </a>            <button class="btn btn-warning">
+            <span>
+                <a th:href="@{/}">
+                    <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                </a>
+            </span>
+            <button class="btn btn-warning">
                 <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
             </button>
         </nav>
