--- a/src/main/resources/templates/noticias.html
+++ b/src/main/resources/templates/noticias.html
@@ -13,7 +13,7 @@
 
     <body>
         <nav class="navbar d-flex justify-content-between">
-            <span style="width: 20% ;">
+            <span>
                 <a th:href="@{/}">
                     <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
