--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav class="navbar d-flex justify-content-between">
-        <span style="width: 20% ;">
+        <span>
             <a th:href="@{/}">
                 <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
             </a>
