--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 <body>
-    <nav class="navbar d-flex justify-content-between">
+    <nav>
         <span>
             <a th:href="@{/}">
                 <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
