--- a/src/main/resources/templates/formulario_periodista.html
+++ b/src/main/resources/templates/formulario_periodista.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar bg-dark d-flex justify-content-between">
+        <nav>
             <span>
                 <a th:href="@{/}">
                     <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
