--- a/src/main/resources/templates/lista_periodistas.html
+++ b/src/main/resources/templates/lista_periodistas.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar d-flex justify-content-between">
+        <nav>
             <span>
                 <a th:href="@{/noticias}">
                     <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
