--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,9 +17,11 @@
                     <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
             </span>
-            <button class="btn btn-warning">
-                <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
-            </button>
+            <div class="navbarBotones">
+                <button class="btn btn-warning">
+                    <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
+                </button>
+            </div>
         </nav>
 
         <div>
