--- a/src/main/resources/templates/lista_periodistas.html
+++ b/src/main/resources/templates/lista_periodistas.html
@@ -18,9 +18,11 @@
                     <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
                 </a>
             </span>
-            <button class="btn btn-warning">
-                <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
-            </button>
+            <div class="navbarBotones">
+                <button class="btn btn-warning">
+                    <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
+                </button>
+            </div>
         </nav>
 
         <div th:each="periodista:${periodistas}">
