--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -1,57 +1,59 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizarras Artesanales</title>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilos.css">
-</head>
-<body>
-    <nav>
-        <span>
-            <a th:href="@{/}">
-                <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
-            </a>
-        </span>
-        <button class="btn btn-warning">
-            <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
-        </button>
-    </nav>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pizarras Artesanales</title>
 
-    <div>
-        <form th:action="@{/registro}" method="POST" class="formulario">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+              integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/estilos.css">
+    </head>
+    <body>
+        <nav>
+            <span>
+                <a th:href="@{/}">
+                    <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                </a>
+            </span>
+            <div class="navbarBotones">
+                <button class="btn btn-warning">
+                    <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
+                </button>
+            </div>
+        </nav>
 
-            <div class="form-group my-3">
-                <h3 class="reesplandor">Registrate</h3>
-            </div>
-            <div class="form-group my-3">
-                <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
-                    th:value="${nombreu}">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Contraseña" name="password">
-            </div>
-            <div class="form-group my-3">
-                <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
-            </div>
-            <button type="submit" name="registro" class="btn btn-light mt-3 botones">Registrarme</button>
+        <div>
+            <form th:action="@{/registro}" method="POST" class="formulario">
 
-        </form>
-        <br>
-        <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
-            <div class="card-body">
-                <h5 class="card-title">Error</h5>
-                <p class="card-text" th:text="${error}"></p>
+                <div class="form-group my-3">
+                    <h3 class="reesplandor">Registrate</h3>
+                </div>
+                <div class="form-group my-3">
+                    <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
+                           th:value="${nombreu}">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Contraseña" name="password">
+                </div>
+                <div class="form-group my-3">
+                    <input type="password" class="form-control" placeholder="Repetir contraseña" name="password2">
+                </div>
+                <button type="submit" name="registro" class="btn btn-light mt-3 botones">Registrarme</button>
+
+            </form>
+            <br>
+            <div th:if="${error != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                <div class="card-body">
+                    <h5 class="card-title">Error</h5>
+                    <p class="card-text" th:text="${error}"></p>
+                </div>
             </div>
         </div>
-    </div>
-<div class="footer">
-    <p>Copyright • Todos los derechos reservados • 2022</p>
-</div>
-</body>
+        <div class="footer">
+            <p>Copyright • Todos los derechos reservados • 2022</p>
+        </div>
+    </body>
 
 </html>
