--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -4,7 +4,22 @@ body {
     background-size: cover;
 }
 
+.titulo{
+text-align: center;
+    color: black;
+    margin: 0;
+    font-size: 25px;
+    text-shadow:
+        0 0 5px red,
+        0 0 15px red,
+        0 0 30px red,
+        0 0 50px red,
+        0 0 75px red,
+        0 0 100px red;
+}
+
 .footer {
+    color: greenyellow;
     position: fixed;
     left: 0px;
     bottom: 0px;
@@ -45,14 +60,19 @@ body {
     max-width: 400px;
 }
 
-.noticiaTarjeta {
+.publicacionTarjeta {
     box-shadow: inset 0 0 5px white, 0 0 40px white;
     border-radius: 20px;
     max-width: 400px;
 }
 
-.pizarrasLogo {
-    width: 10%;
+.headbangersLogo {
+    width: 18%;
+}
+
+.logoBienvenida{
+        width: 100%;
+
 }
 
 .navbarBotones {
