--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pizarras Artesanales</title>
+        <title>Headbangers Cave - Login</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -13,13 +13,13 @@
     <body>
         <nav>
             <span>
-                <a th:href="@{/}">
-                    <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                <a th:href="@{/publicaciones}">
+                    <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
                 </a>
             </span>
             <div class="navbarBotones">
                 <button class="btn btn-warning">
-                    <a class="text-decoration-none text-dark" th:href="@{/}">Volver</a>
+                    <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
                 </button>
             </div>
         </nav>
@@ -28,7 +28,7 @@
             <form th:action="@{/logincheck}" method="POST" class="formulario">
 
                 <div class="form-group my-3">
-                    <h3 class="reesplandor">Accede a las noticias</h3>
+                    <h3 class="reesplandor">Accede y publicá tu musica</h3>
                 </div>
                 <div class="form-group my-3">
                     <input type="text" class="form-control" placeholder="Nombre de Usuario" name="nombreu"
@@ -37,7 +37,7 @@
                 <div class="form-group my-3">
                     <input type="password" class="form-control" placeholder="Contraseña" name="password">
                 </div>
-                <button type="submit" class="btn btn-light mt-3 botones">Ingresar</button>
+                <button type="submit" class="btn btn-light mt-3 botones">Entrar</button>
 
             </form>
             <br>
