--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pizarras del Sur - Inicio</title>
+        <title>Headbangers Cave - Tu Perfil</title>
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -12,28 +12,102 @@
     </head>
 
     <body>
-        <nav>
+        <nav sec:authorize="isAnonymous()">
             <span>
-                <a th:href="@{/}">
-                    <img class="pizarrasLogo" src="../images/pizarrasLogo.png" alt="pizarrasdelsur">
+                <a th:href="@{/publicaciones}">
+                    <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
                 </a>
             </span>
             <div class="navbarBotones">
                 <button class="btn btn-warning">
-                    <a class="text-decoration-none text-dark" th:href="@{/noticias}">Volver</a>
+                    <a class="text-decoration-none text-dark" th:href="@{/publicaciones}">Volver</a>
+                </button>
+            </div>
+        </nav>
+        <nav sec:authorize="hasAnyRole('USER','ADMIN')">
+            <span>
+                <a th:href="@{/usuario/dashboard}">
+                    <img class="headbangersLogo" src="/images/headbangersLogo.png" alt="Headbangers Cave">
+                </a>
+            </span>
+            <div class="navbarBotones">
+                <button class="btn btn-warning">
+                    <a class="text-decoration-none text-dark" th:href="@{/usuario/dashboard}">Volver</a>
                 </button>
             </div>
         </nav>
 
         <div class="reesplandor">
+            <p th:text="'Nombre de usuario: ' + ${usuario.nombreu}"></p>
+
+            <div sec:authorize="hasAnyRole('USER','ADMIN')">
+                <div th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'admin'}">
+                    <form th:action="@{/usuario/modificarNombreDeUsuario}" method="POST" class="formulario">
+                        <div sec:authorize="hasAnyRole('USER','ADMIN')">
+                            <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'admin'}"><input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu"><button type="submit" name="modificarNombreDeUsuario">Modificar</button></p>
+                            <div th:if="${exitoNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                                <div class="card-body">
+                                    <h5 class="card-title">Exito</h5>
+                                    <p class="card-text" th:text="${exitoNombre}"></p>
+                                </div>
+                            </div>
+                            <div th:if="${errorNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                                <div class="card-body">
+                                    <h5 class="card-title">Que gil que sos...</h5>
+                                    <p class="card-text" th:text="${errorNombre}"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
             <br>
-            <p th:text="'Nombre de usuario:.................' + ${usuario.nombreu}"></p>
-            <p th:text="'Fecha de Alta:.................' + ${usuario.fechalta}"></p>
-            <p th:text="'Rol:.................' + ${usuario.rol}"></p>
-            <p sec:authorize="hasRole('PERIODISTA')" th:text="'Sueldo mensual:.................' + ${usuario.sueldoMensual}"></p>
-            <p sec:authorize="hasRole('PERIODISTA')">Noticias creadas:</p>
-            <div sec:authorize="hasRole('PERIODISTA')" th:each="noticia:${usuario.noticiasPeriodista}">
-                <p th:text="${noticia.titulo}"></p>
+            <p th:text="'Imagen de perfil'"></p>
+            <img th:src="@{'/perfiles/' + ${usuario.foto}}" alt='foto de perfil' class="card-img-top" style="width: 20%" >
+            <div sec:authorize="hasAnyRole('USER','ADMIN')">
+                <form th:action="@{/usuario/modificarImagenDePerfil}" method="POST" enctype="multipart/form-data" class="formulario">
+                    <div sec:authorize="hasAnyRole('USER','ADMIN')">
+                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'admin'}"><input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="file"><button type="submit" name="modificarImagenDePerfil">Modificar</button></p>
+                        <div th:if="${exitoImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                            <div class="card-body">
+                                <h5 class="card-title">Exito</h5>
+                                <p class="card-text" th:text="${exitoImagen}"></p>
+                            </div>
+                        </div>
+                        <div th:if="${errorImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
+                            <div class="card-body">
+                                <h5 class="card-title">Que gil que sos...</h5>
+                                <p class="card-text" th:text="${errorImagen}"></p>
+                            </div>
+                        </div>
+                    </div>     
+                </form>
+            </div>
+
+
+            <p th:text="'Miembro desde: ' + ${usuario.fechalta}"></p>
+            <p th:text="'Rol: ' + ${usuario.rol}"></p>
+            <p>Publicaciones</p>
+            <div class="row mx-5">
+                <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
+                    <div class="card bg-black mt-1">
+                        <div class="card-body">
+                            <img class="publicacionTarjeta" th:src="@{'/perfiles/' + ${publicacion.creador.foto}}" alt='foto de perfil' style="width: 30%" align='right'>
+                            <h3 th:text="${publicacion.creador.nombreu}"></h3>
+                            <h6 th:text="${publicacion.fecha}"></h6>                           
+
+                            <h3 th:text="${publicacion.titulo}"></h3>
+                            <h5 th:text="${publicacion.comentario}"></h5>
+                            <button class="btn btn-warning">
+                                <a class="text-decoration-none text-dark" th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
+                            </button>
+                            <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-secondary"
+                               sec:authorize="hasAnyRole('ADMIN')">Editar Publicación</a><br>
+                            <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" sec:authorize="hasRole('ADMIN')">Eliminar
+                                Publicación</a><br>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
