arreglo de modificacion de foto de perfil

--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -38,10 +38,10 @@
         </nav>
 
         <div class="reesplandor">
-            <p th:text="'Nombre de usuario: ' + ${usuario.nombreu}"></p>
+            <p th:text="${usuario.nombreu}" style='text-align: center'></p>
 
                 <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                    <form th:action="@{/usuario/modificarNombreDeUsuario}" method="POST" class="formulario">
+                    <form th:action="@{/usuario/modificarNombreDeUsuario/__${usuario.id}__}" method="POST" class="formulario">
                         <div sec:authorize="hasAnyRole('USER','ADMIN')">
                             <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}"><input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu"><button type="submit" name="modificarNombreDeUsuario">Modificar</button></p>
                             <div th:if="${exitoNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
@@ -63,7 +63,7 @@
             <p th:text="'Imagen de perfil'"></p>
             <img th:src="@{'/perfiles/' + ${usuario.foto}}" alt='foto de perfil' class="card-img-top" style="width: 20%" >
             <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                <form th:action="@{/usuario/modificarImagenDePerfil}" method="POST" enctype="multipart/form-data" class="formulario">
+                <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
                     <div sec:authorize="hasAnyRole('USER','ADMIN')">
                         <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}"><input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="file"><button type="submit" name="modificarImagenDePerfil">Modificar</button></p>
                         <div th:if="${exitoImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
