--- a/src/main/resources/templates/lista_usuarios.html
+++ b/src/main/resources/templates/lista_usuarios.html
@@ -26,7 +26,9 @@
         <div th:each="usuario:${usuarios}" class="publicacionTarjeta">
             <div class="card bg-black mt-1">
                 <div class="card-body">
-                    <img class="publicacionTarjeta" th:src="@{'/perfiles/' + ${usuario.foto}}" alt='foto de perfil' style="width: 30%" align='right'>
+                    <a th:href="${usuario.imagen.imagenUrl}">
+                        <img class="publicacionTarjeta" th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                    </a>
                     <h3 th:text="${usuario.nombreu}"></h3>
                     <h6 th:text="${usuario.fechalta}"></h6>                           
                     <button class="btn btn-warning">
