--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,18 +11,13 @@
         <link rel="stylesheet" href="/css/estilos.css">
     </head>
 
-    <body>
-        <span>
+    <body id='fondoBienvenida'>
+        <div class='temblor'>
             <a th:href="@{/publicaciones}" >
                 <img class="logoBienvenida" src="../images/headbangersLogo.png" alt="Bienvenido a headbangers cave">
             </a>
-        </span>
+        </div>
 
-
-        <h1 class="reesplandor" style="text-align: center">
-            Toca la imagen para acceder
-        </h1>
-        
         <div class="footer">
             <p>Copyright • Todos los derechos reservados • 2022</p>
         </div>
