--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -43,7 +43,10 @@
             <div sec:authorize="hasAnyRole('USER','ADMIN')">
                 <form th:action="@{/usuario/modificarNombreDeUsuario/__${usuario.id}__}" method="POST" class="formulario">
                     <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}"><input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu"><button type="submit" name="modificarNombreDeUsuario">Modificar</button></p>
+                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu or hasRole == ADMIN}">
+                            <input type="text" class="form-control" placeholder="Modifica tu nombre de usuario" name="nombreu">
+                            <button type="submit" name="modificarNombreDeUsuario" class="btn btn-light mt-3 botones">Modificar</button>
+                        </p>
                         <div th:if="${exitoNombre != null}" class="card text-white bg-transparent mb-3 mensajeError">
                             <div class="card-body">
                                 <h5 class="card-title">Exito</h5>
@@ -60,14 +63,28 @@
                 </form>
             </div>
             <br>
-            <p th:text="'Imagen de perfil'"></p>
-            <a th:href="${usuario.imagen.imagenUrl}">
-                <img class="publicacionTarjeta" th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
-            </a>
+
+            <div th:if="${usuario.imagen == null}">
+                <img src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+            </div>
+            <div th:unless="${usuario.imagen == null}">
+                <a th:href="${usuario.imagen.imagenUrl}">
+                    <img th:src="${usuario.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                </a>
+            </div>
             <div sec:authorize="hasAnyRole('USER','ADMIN')">
                 <form th:action="@{/usuario/modificarImagenDePerfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data" class="formulario">
                     <div sec:authorize="hasAnyRole('USER','ADMIN')">
-                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}"><input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="file"><button type="submit" name="modificarImagenDePerfil">Modificar</button></p>
+                        <p th:if="${session.usuariosession.nombreu == usuario.nombreu or hasRole == ADMIN}">
+                            <input type="file" class="form-control" placeholder="modifica tu foto de perfil" name="multipartFile">
+                            <button type="submit" name="modificarImagenDePerfil" class="btn btn-light mt-3 botones">Modificar</button>
+                            <span th:unless="${usuario.imagen == null}">
+                                <button th:if="${session.usuariosession.nombreu == usuario.nombreu or hasRole == ADMIN}" class="btn btn-light mt-3 botones">
+                                    <a th:href="@{/usuario/borrarImagenDePerfil/__${usuario.id}__}" class="text-decoration-none text-dark" >Eliminar</a>
+                                </button>
+                            </span>
+                        </p>
+
                         <div th:if="${exitoImagen != null}" class="card text-white bg-transparent mb-3 mensajeError">
                             <div class="card-body">
                                 <h5 class="card-title">Exito</h5>
@@ -84,15 +101,21 @@
                 </form>
             </div>
 
-
             <p th:text="'Miembro desde: ' + ${usuario.fechalta}"></p>
             <p th:text="'Rol: ' + ${usuario.rol}"></p>
+            
+            
             <p>Publicaciones</p>
             <div class="row mx-5">
                 <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
                     <div class="card bg-black mt-1">
                         <div class="card-body">
-                            <img class="publicacionTarjeta" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                            <div th:if="${publicacion.creador.imagen == null}">
+                                <img class="publicacionTarjeta" style="width: 30%" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+                            </div>
+                            <div th:unless="${publicacion.creador.imagen == null}">
+                                <img th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'>
+                            </div>
                             <h3 th:text="${publicacion.creador.nombreu}"></h3>
                             <h6 th:text="${publicacion.fecha}"></h6>                           
 
