--- a/src/main/resources/templates/publicaciones.html
+++ b/src/main/resources/templates/publicaciones.html
@@ -5,24 +5,24 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Headbangers Cave - Publicaciones</title>
-
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
               integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/estilos.css">
     </head>
 
     <body>
-        <span sec:authorize="isAnonymous()">
-            <a th:href="@{/publicaciones}">
-                <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
-            </a>
-        </span>
-        <span sec:authorize="hasAnyRole('USER', 'ADMIN')">
-            <a th:href="@{/usuario/dashboard}">
-                <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
-            </a>
-        </span>
         <nav>
+            <span sec:authorize="isAnonymous()">
+                <a th:href="@{/publicaciones}">
+                    <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
+                </a>
+            </span>
+            <span sec:authorize="hasAnyRole('USER', 'ADMIN')">
+                <a th:href="@{/usuario/dashboard}">
+                    <img class="headbangersLogo" src="../images/headbangersLogo.png" alt="Headbangers Cave">
+                </a>
+            </span>
+
             <div style="text-align: center" class="navbarBotones">
                 <button class="btn btn-warning" sec:authorize="hasAnyRole('USER', 'ADMIN')">
                     <a class="text-decoration-none text-dark" th:href="@{/crear}">Crear Publicacion</a>
@@ -52,32 +52,38 @@
                 <p class="card-text" th:text="${exito}"></p>
             </div>
         </div>
+        <div class="scroll">
+            <div class="row mx-5">
+                <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
+                    <div class="card bg-black" id='tarjeta'>
+                        <div class="card-body">
+                            <div th:if="${publicacion.creador.imagen == null}">
+                                <a th:href="@{/usuario/perfil/__${publicacion.creador.id}__}">
+                                    <img class="publicacionTarjeta" style="width: 140px" align='right' src="/images/sin_imagen_de_perfil.jpg" alt="usuario sin imagen de perfil">
+                                </a>
+                            </div>
+                            <div th:unless="${publicacion.creador.imagen == null}">
+                                <a th:href="@{/usuario/perfil/__${publicacion.creador.id}__}">
+                                    <img class="publicacionTarjeta" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 140px" align='right'>
+                                </a>
+                            </div>
+                            <h3 th:text="${publicacion.creador.nombreu}"></h3>
+                            <small th:text="${publicacion.fecha}"></small>
 
-        <div class="title-text-center py-5" >
-            <h2 class="reesplandor" th:text="' Últimas publicaciones'"></h2>
-        </div>
+                            <h4 th:text="${publicacion.titulo}"></h4>
+                            <h5 th:text="${publicacion.comentario}"></h5>
+                            <a class="btn btn-light"  th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
+                            <br>
 
-        <div class="row mx-5">
-            <div th:each="publicacion:${publicaciones}" class="publicacionTarjeta">
-                <div class="card bg-black mt-1">
-                    <div class="card-body">
-                        <a th:href="@{/usuario/perfil/__${publicacion.creador.id}__}"><img class="publicacionTarjeta" th:src="${publicacion.creador.imagen.imagenUrl}" alt='foto de perfil' style="width: 30%" align='right'></a>
-                        <h3 th:text="${publicacion.creador.nombreu}"></h3>
-                        <h6 th:text="${publicacion.fecha}"></h6>                           
-                        <h3 th:text="${publicacion.titulo}"></h3>
-                        <h5 th:text="${publicacion.comentario}"></h5>
-
-                        <a  class="btn btn-light"  th:href="@{${publicacion.link}}" target="_blank">Ir al enlace</a>
-                        <span sec:authorize="hasAnyRole('USER', 'ADMIN')">
-                            <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-light"  th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}">Editar Publicación</a><br>
-                            <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or session.usuariosession.nombreu == 'mauriAdmin'}">Eliminar Publicación</a><br>
-                        </span>
+                            <span sec:authorize="hasAnyRole('USER', 'ADMIN')">
+                                <a th:href="@{/editar/__${publicacion.id}__}" class="btn btn-dark"  th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or hasRole == ADMIN}">Editar Publicación</a>
+                                <a th:href="@{/__${publicacion.id}__}" class="btn btn-danger" th:if="${session.usuariosession.nombreu == publicacion.creador.nombreu or hasRole == ADMIN}">Eliminar Publicación</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="footer">
-                <p>Copyright • Todos los derechos reservados • 2022</p>
-            </div>
+        </div>
     </body>
 
 </html>
